--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "0.9.5",
+    "react-text-truncate": "^0.19.0",
     "redux": "^4.2.1"
   },
   "scripts": {
